added state to h2

--- a/checkWeather.html
+++ b/checkWeather.html
@@ -9,10 +9,10 @@
     </head>
     <body>      
         <h1 class="title">Weekly Weather Update</h1>
-        <h2>5 Day Forecast</h2>
+        <h2>5 Day Weather: Texas</h2>
         <form>
             <label for="location">Location (city):</label>
-            <select id="location" name="location">
+            <select id="location" name="location" required>
                 <option value="Austin">Austin</option> 
                 <option value="Dallas">Dallas</option>
                 <option value="Fort Worth">Fort Worth</option>
@@ -46,7 +46,6 @@
                 <section id="low-temp">Low Temp</section>
             </section>
         </section>
-
         <button class="generate" type="button">Generate</button>
     </body>
 </html>
