--- a/checkWeather.html
+++ b/checkWeather.html
@@ -20,27 +20,27 @@
             </select>
         </form>
         <section class="chart">
-            <section id="monday" class="day">
+            <section id="monday" class="day1">
                 <section id="top">Monday</section>
                 <section id="hi-temp">High Temp</section>
                 <section id="low-temp">Low Temp</section>
             </section>
-            <section id="tuesday" class="day">
+            <section id="tuesday" class="day2">
                 <section id="top">Tuesday</section>
                 <section id="hi-temp">High Temp</section>
                 <section id="low-temp">Low Temp</section>
             </section>
-            <section id="wednesday" class="day">
+            <section id="wednesday" class="day3">
                 <section id="top">Wednesday</section>
                 <section id="hi-temp">High Temp</section>
                 <section id="low-temp">Low Temp</section>
             </section>
-            <section id="thursday" class="day">
+            <section id="thursday" class="day4">
                 <section id="top">Thursday</section>
                 <section id="hi-temp">High Temp</section>
                 <section id="low-temp">Low Temp</section>
             </section>
-            <section id="friday" class="day">
+            <section id="friday" class="day5">
                 <section id="top">Friday</section>
                 <section id="hi-temp">High Temp</section>
                 <section id="low-temp">Low Temp</section>
